# vclick

./: .gitignore  .gitmodules  README.md  TODO  archives.html  authors.html  categories.html  cs.qrc  csengine.cpp  csengine.h  csoundhandler.cpp  csoundhandler.h  eclick-client.pro  eclick-server.pro  first_release.html  index.html  jackreader.cpp  jackreader.h  main.cpp  main.qml  metro-server.pro  metronome.pro  notes-osx-installers.txt  oschandler.cpp  oschandler.h  release_0.2.0.html  release_0.3.0.html  release_1.0.0.html  release_2.0.0_rc1.html  release_3.0.0.html  release_3.1.3.html  tags.html  test.sco  vclick-client.desktop  vclick-server+client-installer.iss  vclick-server.desktop  wsserver.cpp  wsserver.h
android/: AndroidManifest.xml
author/: tarmo-johannes.html
build-eclick-client-iphonesimulator_clang_Qt_5_6_0_for_iOS-Debug/: LaunchScreen.storyboard
category/: misc.html  news.html
client/: CMakeLists.txt  credits  deploy_AppImage.sh  eclick-client.icns  eclick-client.pro  eclick-client.qrc  eyeclick-client.pro  eyeclick-client.qrc  ios-screen.h  ios-screen.mm  main.cpp  main.qml  oschandler.cpp  oschandler.h  privacy_policy.MD  qtquickcontrols2.conf  serverdiscovery.cpp  serverdiscovery.h  vclick-client.desktop  vclick-client.pro  vclick-client.qrc  winicon.rc
client/android/: AndroidManifest.xml  build.gradle
client/android/gradle/wrapper/: gradle-wrapper.properties
client/android/res/drawable/: splashscreen.xml  splashscreen_land.xml  splashscreen_port.xml
client/android/res/values/: ic_launcher_background.xml
client/ios/: Info.plist  Info.plist.xml  Launch.storyboard  generate.sh  ios-download.html
client/ios/Images.xcassets/LaunchImage.launchimage/: Contents.json
client/ios/icons/: generate.sh
client/ios/launchimages/: generate.sh
client/qosc/: qoscserver.cpp  qoscserver.h
content/: first-beta-release.md  first-beta-release.rst  release-0.2.0.rst  release-0.3.0.rst  release-1.0.0.rst  release-v3.0.0.md  release-v3.1.3.md  v2-rc1.md
feeds/: all-en.atom.xml  all.atom.xml  news.atom.xml  tarmo-johannes.atom.xml  tarmo-johannes.rss.xml
manage/: Makefile  pelicanconf.py  publishconf.py
pages/: about.html  contact.html  contribute.html  download.html  getting-started.html  how-it-works.html  score-files.html  score-library.html
qosc/: qoscclient.cpp  qoscclient.h  qoscserver.cpp
release_notes/: Release notes 0.2.0.md  Release notes 0.3.0.md  Release notes 1.0.0.md  Release notes 2.0.0.md  Release notes 3.0.0.md  Release notes 3.1.3.md
scores/: camci.sco  elea.sco  exotica1.sco  hosolawa -  vertical time study I.sco  lucidity.sco  (+7 more)
(+54 files in other folders)
